Fix services title hiding on mobile

--- a/client/src/components/pages/style.css
+++ b/client/src/components/pages/style.css
@@ -1536,6 +1536,10 @@ h6 {
     .grid {
         grid-template-columns: 27% 27% 27% 27% 27% 24%;
     }
+
+    .servicescontainer  { 
+        padding-top: 125px;
+    }
   }
 
 
